fixed mcenter image from overflowing on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -253,6 +253,7 @@ footer {
 @media(max-width: 800px){
    .container{
        margin: 0px 30px;
+       width: 800px;
    }
 header {
     width: 100%;
@@ -299,7 +300,8 @@ header .logo {
 @media(max-width: 500px){
 
    .container{
-    margin: 0px
+    margin: 0px;
+    width: 500px;
 }
 header {
  width: 100%;
@@ -347,7 +349,10 @@ header .logo{
 .cta, .main-content{
     margin: 50px 10px;
 }
-
+.middle-img{
+    display: flex;
+    width: 100%;
+}
 .top-content{
     display: flex;
     flex-direction: column;
